# gppop

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: gwtc-3.yaml  gwtc-3_corr.yaml
src/gppop/: core.py  gppop.py  io.py
